fix: fix additional code smells